kube/guestbook-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-v2
  labels:
    app: guestbook
    version: "2.0"
spec:
  selector:
    matchLabels:
      app: guestbook
      version: "2.0"
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
        version: "2.0"
    spec:
      containers:
      - name: guestbook
        image: ibmcom/guestbook:v2
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 3000
