kube/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: guestbook
  type: NodePort
